:art: [ADD] vistas principales

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -4,15 +4,16 @@
     font-weight: 500;
 }
 
+
 .cardLogin {
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
     background: #{$hospital-walls};
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    opacity: .9;
+    opacity: 0.9;
 }
 .cardLogin h5 {
     font-weight: bold;
@@ -20,9 +21,10 @@
 .cardLogin_button {
     color: #{$hospital-walls};
     background: #{$deep-blue-hospital};
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 
 .cardAsistencia {
     width: 100%;
@@ -45,7 +47,7 @@
 .cardAsistencia_button {
     color: #{$deep-blue-hospital};
     background: #{$hospital-walls};
-    border-radius: 2px;
+    border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -53,6 +55,6 @@
 .footer {
     background: #{$just-gray};
 }
-.footer p{
+.footer p {
     color: #{$hospital-walls};
 }
